formatting, add round to fix float accuracy

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- link to bootstrap, must be relative to /bin/coverage_report_single.py -->
-        <link rel="stylesheet" href="../data/static/bootstrap.min.css" type="text/css" href="">
+        <link rel="stylesheet" href="../data/static/css/bootstrap.min.css" type="text/css" href="">
         <style>
             body{
                 padding-top: 100;
