--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -11,10 +11,10 @@
             body{
                 padding-top: 100;
                 padding-bottom: 150;
-                width: 85%;
+                width: 90%;
                 margin-left: auto;
                 margin-right: auto;
-                font-size:18px
+                font-size:18px;
                 }
             .btn {
                 margin-bottom: 10px;   
