change report wording

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -177,17 +177,17 @@
     <br></br>
     <!-- Optional section for displaying SNP information if generated -->
     <div class="snps">
-        <h2> Coverage of SNPs </h2>
+        <h2> Coverage of Known Variants </h2>
         <br>
-        Below are two tables giving coverage of known SNPs. The first gives those not covered at the given threshold
+        Below are two tables giving coverage of known variants. The first gives those not covered at the given threshold
         level, and the second contains those covered above the threshold. <br>
-        <b>$total_snps</b> SNPs were within the given panel regions and included for analysis, of these <b>$snps_not_covered</b>
-        (<b>$snps_pct_not_covered %</b>) SNPs were not covered at $threshold, and <b>$snps_covered</b> 
+        <b>$total_snps</b> variants were within the given panel regions and included for analysis, of these <b>$snps_not_covered</b>
+        (<b>$snps_pct_not_covered %</b>) variants were not covered at $threshold, and <b>$snps_covered</b> 
         (<b>$snps_pct_covered %</b>) were covered at $threshold or greater.
         <br>
         $vcfs
         </br>
-        Table of SNPs with low coverage &nbsp
+        Table of variants with low coverage &nbsp
         <button class="btn btn-info collapsible btn-sm">Show / hide table</button>
         <div class="content">
             <table class="snps" style="table-layout: fixed; width:100%">
@@ -195,7 +195,7 @@
             </table>
         </div>        
         <br>
-        Table of SNPs with high coverage &nbsp
+        Table of variants with high coverage &nbsp
         <button class="btn btn-info collapsible btn-sm">Show / hide table</button>
         <div class="content">
             <table class="snps" style="table-layout: fixed; width:100%">
