--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -209,7 +209,7 @@
                 &nbsp&nbsp Report generated on $date
             </span>
             <span style="vertical-align:middle">
-                Report created with Athena $logo
+                Report created with Athena $version $logo
             </span>
         </div>
     </div>
