fix cropping of large tables by viewport fixed height

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -229,7 +229,7 @@
             if (content.style.maxHeight){
             content.style.maxHeight = null;
             } else {
-            content.style.maxHeight = content.scrollHeight + "px";
+            content.style.maxHeight = content.scrollHeight * 2 + "px";
             } 
         });
         }
