--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -101,6 +101,7 @@
             $build
             $panel
             <li>Genes in the applied panel(s): <b>$total_genes</b></li>
+            <li>Low coverage threshold set: <b>$threshold</b></li>
             <li>Panel coverage at $threshold: <b>$panel_pct_coverage %</b></li>
             <li>Total genes with 100% coverage at $threshold: <b>$fully_covered_genes</b></li>
             <li>Total genes <b>not</b> 100% covered at $threshold: <b>$gene_issues</b></li>
