report text formatting

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -173,8 +173,8 @@
         level, and the high coverage table contains those covered above the threshold. <br></br>
 
         <li><b>$total_snps</b> variants were within the given panel regions and included for analysis</li>
-        <li><b>$snps_covered</b> (<b>$snps_pct_covered %</b>) were covered at or above $threshold</li>
-        <li><b>$snps_not_covered</b> (<b>$snps_pct_not_covered %</b>) variants were not covered at $threshold</li>
+        <li><b>$snps_covered</b> (<b>$snps_pct_covered %</b>) were covered at or above <b>$threshold</b></li>
+        <li><b>$snps_not_covered</b> (<b>$snps_pct_not_covered %</b>) variants were <b>not</b> covered at <b>$threshold</b></li>
         <li><b>$snps_out_panel</b> (<b>$snps_pct_out_panel %</b>) variants spanned region boundaries </li>
         <br>
         $vcfs
