foramtting and comments

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -179,6 +179,7 @@
         <br>
         $vcfs
         </br>
+        <!-- snps_no_cov is div passed from script if variants spanning exon boundaries found -->
         $snps_no_cov
         Table of variants with low coverage &nbsp
         <button class="btn btn-info collapsible btn-sm">Show / hide table</button>
