--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -200,8 +200,9 @@
         </div>    
     <!-- function to conditionally hide SNPs div if SNPs option not passed -->
     <script>
-        var snps = $total_snps
-        if ($total_snps == 0) { 
+        // $total_snps is int passed from report script, set to JS snp_check var on writing to template to check against
+        var snp_check = $total_snps
+        if ($snp_check == 0) { 
         document.getElementById('snps').style.display = "none";  
         } 
     </script>
