fix JS variable name

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -202,9 +202,9 @@
     <script>
         // $total_snps is int passed from report script, set to JS snp_check var on writing to template to check against
         var snp_check = $total_snps
-        if ($snp_check == 0) { 
+        if (snp_check == 0) { 
         document.getElementById('snps').style.display = "none";  
-        } 
+        }
     </script>
 
     <!-- function to make sections collapsible -->
