--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -70,7 +70,7 @@
                 <li> A series of interactive plots of exons with sub-optimal coverage.</li>
                 <li> A summary table of average coverage across all genes.</li>
                 <li> A full table of per exon coverage across all genes.</li>
-                <li> A section provding coverage of known SNPs (if given).</li>
+                <li> A section providing coverage of known variants (if given).</li>
             </ul>    
             </p>
         </div>
@@ -100,7 +100,7 @@
             <br>
             <p style="font-size:18px">
                 Of the <b>$total_genes</b> genes included in the panel, <b>$exon_issues</b> exons in 
-                <b>$gene_issues</b> genes had sub optimal coverage.<br>
+                <b>$gene_issues</b> genes had sub optimal-coverage.<br>
                 <br>
             </p>
             <table id=sub class="table table-striped sortable" width="100%">
