copy to clipboard function

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -237,15 +237,14 @@
 
     <!-- Function to copy text to clipboard, used for clinical summary text -->
     <script>
-        function CopyToClipboard(id)
-        {
-        var r = document.createRange();
-        r.selectNode(document.getElementById(id));
-        window.getSelection().removeAllRanges();
-        window.getSelection().addRange(r);
-        document.execCommand('copy');
-        window.getSelection().removeAllRanges();
-        $('#element').tooltip('show')
+        function CopyToClipboard(id) {
+            var r = document.createRange();
+            r.selectNode(document.getElementById(id));
+            window.getSelection().removeAllRanges();
+            window.getSelection().addRange(r);
+            document.execCommand('copy');
+            window.getSelection().removeAllRanges();
+            // $('#element').tooltip('show')
         }
     </script>
     </div>
