add UTF8 charset to template meta tag, fixes weird symbol rendering

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <style>
         /*  bootstrap passed as string from static/css*/ 
         $bootstrap
-
+        
         body {
             padding-top: 100;
             padding-bottom: 150;
